Music app style changes

--- a/music_app_index.html
+++ b/music_app_index.html
@@ -45,9 +45,9 @@
     <main style="display: flex; flex-direction: column">
       <button class="button2" data-text="Awesome">
         <span class="actual-text2">&nbsp;The Sampler&nbsp;</span>
-        <span aria-hidden="true" class="hover-text2"
+        <!-- <span aria-hidden="true" class="hover-text2"
           >&nbsp;The Sampler&nbsp;</span
-        >
+        > -->
       </button>
       <h1>Music History Through Sampling</h1>
       <h2>learn your favorite songs roots.</h2>
